force-app/main/default/objects/TPE_Order__c/TPE_Order__c.object-meta.xml
<CustomObject>
    <description>Order details will be stored on this object</description>
    <label>TPE Order</label>
    <nameField>
        <displayFormat>CO-{0000}</displayFormat>
        <label>TPE Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TPE Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>