force-app/main/default/objects/TPE_Order__c/fields/Delivery_Harbour__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Harbour__c</fullName>
    <label>Delivery Harbour</label>
    <length>100</length>
    <type>Text</type>
</CustomField>