force-app/main/default/objects/TPE_Order__c/fields/Estimated_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Delivery__c</fullName>
    <formula>IF( ISPICKVAL( Transport__c , &apos;Sea&apos;) , ADDMONTHS( Trasnport_Start__c ,4),
        IF(ISPICKVAL( Transport__c , &apos;Land&apos;), ADDMONTHS( Trasnport_Start__c ,2), 
            ADDMONTHS( Trasnport_Start__c ,1) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Delivery</label>
    <type>Date</type>
</CustomField>