force-app/main/default/objects/TPE_Order__c/fields/Estimated_delivery_with_Case__c.field-meta.xml
<CustomField>
    <fullName>Estimated_delivery_with_Case__c</fullName>
    <formula>CASE( Transport__c ,
     &apos;Sea&apos;,  ADDMONTHS( Trasnport_Start__c ,4) , 
     &apos;Land&apos;,  ADDMONTHS( Trasnport_Start__c ,2) ,
       &apos;Air&apos;,  ADDMONTHS( Trasnport_Start__c ,1) ,
     null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated delivery with Case</label>
    <type>Date</type>
</CustomField>