force-app/main/default/objects/TPE_Order__c/fields/Mishap_Reason__c.field-meta.xml
<CustomField>
    <fullName>Mishap_Reason__c</fullName>
    <label>Mishap Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>