force-app/main/default/objects/TPE_Order__c/fields/NumOfTenant__c.field-meta.xml
<CustomField>
    <fullName>NumOfTenant__c</fullName>
    <label>NumOfTenant</label>
    <summaryForeignKey>Tenant_Order__c.TPE_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>