force-app/main/default/objects/TPE_Order__c/fields/Order_Location__c.field-meta.xml
<CustomField>
    <fullName>Order_Location__c</fullName>
    <label>Order Location</label>
    <scale>9</scale>
    <type>Location</type>
</CustomField>