force-app/main/default/objects/TPE_Order__c/fields/Parsable_rentable__c.field-meta.xml
<CustomField>
    <fullName>Parsable_rentable__c</fullName>
    <formula>NOT(ISPICKVAL(  Type__c  , &apos;Tank&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parsable rentable</label>
    <type>Checkbox</type>
</CustomField>