force-app/main/default/objects/TPE_Order__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <label>Province</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALBERTA</fullName>
            </value>
            <value>
                <fullName>BRITISH COLUMBIA</fullName>
            </value>
            <value>
                <fullName>MANITOBA</fullName>
            </value>
            <value>
                <fullName>NEW BRUNSWICK</fullName>
            </value>
            <value>
                <fullName>NEWFOUNDLAND and LABRADOR</fullName>
            </value>
            <value>
                <fullName>NORTHWEST TERRITORIES</fullName>
            </value>
            <value>
                <fullName>NOVA SCOTIA</fullName>
            </value>
            <value>
                <fullName>NUNAVUT</fullName>
            </value>
            <value>
                <fullName>ONTARIO</fullName>
            </value>
            <value>
                <fullName>PRINCE EDWARD ISLAND</fullName>
            </value>
            <value>
                <fullName>QUEBEC</fullName>
            </value>
            <value>
                <fullName>SASKATCHEWAN</fullName>
            </value>
            <value>
                <fullName>YUKON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>