force-app/main/default/objects/TPE_Order__c/fields/Transport__c.field-meta.xml
<CustomField>
    <fullName>Transport__c</fullName>
    <label>Transport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Transport_Type</valueSetName>
    </valueSet>
</CustomField>