force-app/main/default/objects/TPE_Order__c/fields/Trasnport_Start__c.field-meta.xml
<CustomField>
    <fullName>Trasnport_Start__c</fullName>
    <label>Trasnport Start</label>
    <type>Date</type>
</CustomField>