force-app/main/default/objects/TPE_Order__c/validationRules/TransportStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>TransportStartDate</fullName>
    <active>true</active>
    <description>Transport Start Date cannot be in the past</description>
    <errorConditionFormula>Trasnport_Start__c  &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Trasnport_Start__c</errorDisplayField>
    <errorMessage>Transport Start Date cannot be in the past</errorMessage>
</ValidationRule>