force-app/main/default/objects/TPE_Order__c/validationRules/TransportType.validationRule-meta.xml
<ValidationRule>
    <fullName>TransportType</fullName>
    <active>true</active>
    <description>Transport type field must not be empty</description>
    <errorConditionFormula>ISBLANK(  TEXT(Transport__c)  )</errorConditionFormula>
    <errorDisplayField>Transport__c</errorDisplayField>
    <errorMessage>Transport type field must not be empty</errorMessage>
</ValidationRule>