force-app/main/default/objects/TPE_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Container__c</columns>
    <columns>Transport__c</columns>
    <columns>Size__c</columns>
    <columns>Type__c</columns>
    <columns>NumOfTenant__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>